--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -1042,6 +1042,9 @@ input#f_comment
     background: url(../img/moin-transclusion.png) no-repeat center center
 
 // transclusion
+.moin-transclusion
+    max-width 100%
+    
 .moin-item-wrapper
     position relative
     display inline-block
