Foobar theme side panel link extended to complete hover area

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -183,6 +183,8 @@ div p
                 margin 0
                 &:hover
                     background border_color
+                a
+                    display block
 
 #moin-footer ul,
 #moin-credits
@@ -997,6 +999,7 @@ input#f_comment
         li
             padding .4em !important
         a
+            display initial !important
             color link_color
             font-size 1.2em
             &:hover
