--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -199,6 +199,7 @@ div p{margin:.5em .2em;font-size:.9em;line-height:1.2em;text-align:justify}
 #moin-global-panel ul li ul,#moin-local-panel ul li ul{padding:.2em .1em;}
 #moin-global-panel ul li ul li,#moin-local-panel ul li ul li{font-size:.8em;color:#808080;font-weight:normal;padding:.1em .1em .2em .1em;border:none;box-shadow:none;margin:0;}
 #moin-global-panel ul li ul li:hover,#moin-local-panel ul li ul li:hover{background:#ccc}
+#moin-global-panel ul li ul li a,#moin-local-panel ul li ul li a{display:block}
 #moin-footer ul,#moin-credits{float:left;list-style-type:none;}
 #moin-footer ul li,#moin-credits li{padding:.1em}
 #moin-footer ul a,#moin-credits a{color:#616161}
@@ -409,7 +410,7 @@ input#f_comment{width:96%;border:1px solid #ccc;margin:.3em 0}
 .moin-subitem-navigation{overflow:hidden;word-wrap:break-word;}
 .moin-subitem-navigation ul{display:block;}
 .moin-subitem-navigation ul li{padding:.4em !important}
-.moin-subitem-navigation ul a{color:#1e90ff;font-size:1.2em;}
+.moin-subitem-navigation ul a{display:initial !important;color:#1e90ff;font-size:1.2em;}
 .moin-subitem-navigation ul a:hover{text-decoration:underline}
 .moin-subitem-navigation .sep{font-size:1.2em;margin-left:0}
 .moin-subitem-navigation li ul{display:none;border-left:1px dotted #ccc;padding-left:5% !important}
