Foobar theme selected link highlighter

--- a/MoinMoin/themes/foobar/static/css/stylus/color_palette.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/color_palette.styl
@@ -19,4 +19,5 @@ active_color = #51d443
 visited_color = #5F9EA0
 nonexistent_link_color = #808080
 nonexistent_hover_color = #ff2727
+selected_link_color = #F82A2A
 error_color = #ff2727
