--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -710,6 +710,9 @@ a
     &.moin-nonexistent:active
         color nonexistent_hover_color
 
+.current
+    color selected_link_color !important
+
 // moin-flash & error
 .moin-flash
     margin 0
