--- a/MoinMoin/themes/foobar/templates/local.html
+++ b/MoinMoin/themes/foobar/templates/local.html
@@ -15,7 +15,7 @@
 <div id="moin-local-panel">
 {% block local %}
 <ul>
-    <li>Views
+    <li class="panel">Views
         {{ itemviews }}    
     </li>
     {% if rev %}
