--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -9,6 +9,9 @@
 // smileys used by moin wiki parser (and maybe others)
 @import "smileys.css"
 
+// admonitions used by moin wiki parser (and maybe others)
+@import "admonitions"
+
 html
   color: black
   font-family: sans-serif
@@ -1017,43 +1020,6 @@ ul.moin-tags li.weight9
 
 .justify
   text-align: justify
-
-#moin-content div.caution,
-#moin-content div.important,
-#moin-content div.note,
-#moin-content div.tip,
-#moin-content div.warning
-  border: 1px solid #E5E5E5
-  background-color: #F9F9FF
-  background-repeat: no-repeat
-  background-position: 8px 8px
-  color: black
-  margin: 10px 30px 10px 30px
-  min-height: 64px
-  padding-left: 64px
-  clear: both
-
-#moin-content div.caution p,
-#moin-content div.important p,
-#moin-content div.note p,
-#moin-content div.tip p,
-#moin-content div.warning p
-  margin-top: 8px
-
-#moin-content div.caution
-  background-image: url("../img/admonitions/caution.png")
-
-#moin-content div.important
-  background-image: url("../img/admonitions/important.png")
-
-#moin-content div.note
-  background-image: url("../img/admonitions/note.png")
-
-#moin-content div.tip
-  background-image: url("../img/admonitions/tip.png")
-
-#moin-content div.warning
-  background-image: url("../img/admonitions/warning.png")
 
 a.moin-www:before,
 a.moin-http:before,
