--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -12,6 +12,9 @@
 // admonitions used by moin wiki parser (and maybe others)
 @import "admonitions"
 
+// user styles used by moin wiki parser (and maybe others) like red/green/solid/dashed/comment...
+@import "userstyles.css"
+
 html
   color: black
   font-family: sans-serif
@@ -974,52 +977,6 @@ ul.moin-tags li.weight8
 
 ul.moin-tags li.weight9
   font-size: 200%
-
-.comment
-  color: #555
-  background-color: #DDF
-
-.red
-  background-color: #FCC
-
-.green
-  background-color: #CFC
-
-.blue
-  background-color: #CCF
-
-.yellow
-  background-color: #FFF29F
-
-.orange
-  background-color: #FFD59B
-
-.solid
-  border: 2px solid #000
-  padding: 2px
-  clear: both
-
-.dashed
-  border: 2px dashed #AEBDCC
-  padding: 2px
-  clear: both
-
-.dotted
-  border: 2px dotted #AEBDCC
-  padding: 2px
-  clear: both
-
-.left
-  text-align: left
-
-.center
-  text-align: center
-
-.right
-  text-align: right
-
-.justify
-  text-align: justify
 
 a.moin-www:before,
 a.moin-http:before,
