--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -95,6 +95,22 @@ input, select { vertical-align: middle; }
 .center { text-align: center; }
 .right { text-align: right; }
 .justify { text-align: justify; }
+a.moin-www:before,a.moin-http:before,a.moin-https:before{content:url("../img/moin-www.png");margin:0 .2em;vertical-align:middle}
+a.moin-file:before,a.moin-ftp:before{content:url("../img/moin-ftp.png");margin:0 .2em;vertical-align:middle}
+a.moin-nntp:before,a.moin-news:before{content:url("../img/moin-news.png");margin:0 .2em;vertical-align:middle}
+a.moin-telnet:before,a.moin-ssh:before,a.moin-irc:before,a.moin-ircs:before{content:url("../img/moin-telnet.png");margin:0 .2em;vertical-align:middle}
+a.moin-mailto:before{content:url("../img/moin-email.png");margin:0 .2em;vertical-align:middle}
+a.moin-attachment:before{content:url("../img/moin-attach.png");margin:0 .2em;vertical-align:middle}
+a.moin-interwiki:before{content:url("../img/moin-inter.png");margin:0 .2em;vertical-align:middle}
+a.moin-action:before{content:url("../img/moin-action.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-text:before{content:url("../img/moin-text.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-image:before{content:url("../img/moin-image.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-audio:before{content:url("../img/moin-audio.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-video:before{content:url("../img/moin-video.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-application:before{content:url("../img/moin-application.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-pdf:before{content:url("../img/moin-pdf.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-package:before{content:url("../img/moin-package.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-drawing:before{content:url("../img/moin-drawing.png");margin:0 .2em;vertical-align:middle}
 html{color:#000;font-family:sans-serif}
 div,p{margin:1em 0}
 sub{vertical-align:sub}
@@ -314,22 +330,6 @@ ul.moin-tags li.weight6{font-size:140%}
 ul.moin-tags li.weight7{font-size:160%}
 ul.moin-tags li.weight8{font-size:180%}
 ul.moin-tags li.weight9{font-size:200%}
-a.moin-www:before,a.moin-http:before,a.moin-https:before{content:url("../img/moin-www.png");margin:0 .2em}
-a.moin-file:before,a.moin-ftp:before{content:url("../img/moin-ftp.png");margin:0 .2em}
-a.moin-nntp:before,a.moin-news:before{content:url("../img/moin-news.png");margin:0 .2em}
-a.moin-telnet:before,a.moin-ssh:before,a.moin-irc:before,a.moin-ircs:before{content:url("../img/moin-telnet.png");margin:0 .2em}
-a.moin-mailto:before{content:url("../img/moin-email.png");margin:0 .2em}
-a.moin-attachment:before{content:url("../img/moin-attach.png");margin:0 .2em}
-a.moin-interwiki:before{content:url("../img/moin-inter.png");margin:0 .2em}
-a.moin-action:before{content:url("../img/moin-action.png");margin:0 .2em}
-a.moin-mime-text:before{content:url("../img/moin-text.png");margin:0 .2em}
-a.moin-mime-image:before{content:url("../img/moin-image.png");margin:0 .2em}
-a.moin-mime-audio:before{content:url("../img/moin-audio.png");margin:0 .2em}
-a.moin-mime-video:before{content:url("../img/moin-video.png");margin:0 .2em}
-a.moin-mime-application:before{content:url("../img/moin-application.png");margin:0 .2em}
-a.moin-mime-pdf:before{content:url("../img/moin-pdf.png");margin:0 .2em}
-a.moin-mime-package:before{content:url("../img/moin-package.png");margin:0 .2em}
-a.moin-mime-drawing:before{content:url("../img/moin-drawing.png");margin:0 .2em}
 #moin-flash{margin:0}
 .moin-flash{margin:0;padding:6px 6px 6px 38px;background-color:#f0f2f5;border-bottom:1px solid #ccc;background-repeat:no-repeat;background-position:16px center}
 .moin-flash-hint{background-image:url("../img/smileys/idea.png")}
