--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -15,6 +15,9 @@
 // user styles used by moin wiki parser (and maybe others) like red/green/solid/dashed/comment...
 @import "userstyles.css"
 
+// mime type icons
+@import "mime_type_icons"
+
 html
   color: black
   font-family: sans-serif
@@ -977,77 +980,6 @@ ul.moin-tags li.weight8
 
 ul.moin-tags li.weight9
   font-size: 200%
-
-a.moin-www:before,
-a.moin-http:before,
-a.moin-https:before
-  content: url(../img/moin-www.png)
-  margin: 0 0.2em
-
-a.moin-file:before,
-a.moin-ftp:before
-  content: url(../img/moin-ftp.png)
-  margin: 0 0.2em
-
-a.moin-nntp:before,
-a.moin-news:before
-  content: url(../img/moin-news.png)
-  margin: 0 0.2em
-
-a.moin-telnet:before,
-a.moin-ssh:before,
-a.moin-irc:before,
-a.moin-ircs:before
-  content: url(../img/moin-telnet.png)
-  margin: 0 0.2em
-
-a.moin-mailto:before
-  content: url(../img/moin-email.png)
-  margin: 0 0.2em
-
-a.moin-attachment:before
-  content: url(../img/moin-attach.png)
-  margin: 0 0.2em
-
-a.moin-interwiki:before
-  content: url(../img/moin-inter.png)
-  margin: 0 0.2em
-
-a.moin-action:before
-  content: url(../img/moin-action.png)
-  margin: 0 0.2em
-
-a.moin-mime-text:before
-  content: url(../img/moin-text.png)
-  margin: 0 0.2em
-
-a.moin-mime-image:before
-  content: url(../img/moin-image.png)
-  margin: 0 0.2em
-
-a.moin-mime-audio:before
-  content: url(../img/moin-audio.png)
-  margin: 0 0.2em
-
-a.moin-mime-video:before
-  content: url(../img/moin-video.png)
-  margin: 0 0.2em
-
-a.moin-mime-application:before
-  content: url(../img/moin-application.png)
-  margin: 0 0.2em
-
-a.moin-mime-pdf:before
-  content: url(../img/moin-pdf.png)
-  margin: 0 0.2em
-
-a.moin-mime-package:before
-  content: url(../img/moin-package.png)
-  margin: 0 0.2em
-
-a.moin-mime-drawing:before
-  content: url(../img/moin-drawing.png)
-  margin: 0 0.2em
 
 #moin-flash
   margin: 0
