--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -18,6 +18,9 @@
 // mime type icons
 @import "mime_type_icons"
 
+// moin diff styling
+@import "moin_diff"
+
 html
   color: black
   font-family: sans-serif
@@ -901,49 +904,6 @@ a.moin-conflict:before
   z-index: 9
   margin: 0
   display: none
-
-.moin-diff
-  width: 99%
-  table-layout: fixed
-
-.moin-diff-header
-  vertical-align: top
-  font-size: 92%
-
-.moin-diff-info
-  margin: .33em .25em
-
-.moin-diff-info-value
-  white-space: normal
-
-.moin-diff-info-caption
-  display: inline-block
-  min-width: 5em
-
-.moin-diff-line-number
-  background-color: #C0C0C0
-
-.moin-diff-added
-  background-color: #E0FFE0
-  vertical-align: top
-  width: 50%
-  white-space: pre-wrap
-  word-wrap: break-word
-  font-family: monospace
-
-.moin-diff-removed
-  background-color: #FFFFE0
-  vertical-align: top
-  width: 50%
-  white-space: pre-wrap
-  word-wrap: break-word
-  font-family: monospace
-
-.moin-diff-added span
-  background-color: #80FF80
-
-.moin-diff-removed span
-  background-color: #FFFF80
 
 ul.moin-tags
   list-style: none
