Modernized theme pygments.css moved out of main.styl

--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -121,6 +121,67 @@ a.moin-mime-drawing:before{content:url("../img/moin-drawing.png");margin:0 .2em;
 .moin-diff-added span{background-color:#80ff80}
 .moin-diff-removed{background-color:#ffffe0;vertical-align:top;width:50%;white-space:pre-wrap;word-wrap:break-word;font-family:monospace;}
 .moin-diff-removed span{background-color:#ffff80}
+.hll { background-color: #ffffcc }
+.c { color: #408080; font-style: italic } /* Comment */
+.err { border: 1px solid #FF0000 } /* Error */
+.k { color: #008000; font-weight: bold } /* Keyword */
+.o { color: #666666 } /* Operator */
+.cm { color: #408080; font-style: italic } /* Comment.Multiline */
+.cp { color: #BC7A00 } /* Comment.Preproc */
+.c1 { color: #408080; font-style: italic } /* Comment.Single */
+.cs { color: #408080; font-style: italic } /* Comment.Special */
+.gd { color: #A00000 } /* Generic.Deleted */
+.ge { font-style: italic } /* Generic.Emph */
+.gr { color: #FF0000 } /* Generic.Error */
+.gh { color: #000080; font-weight: bold } /* Generic.Heading */
+.gi { color: #00A000 } /* Generic.Inserted */
+.go { color: #808080 } /* Generic.Output */
+.gp { color: #000080; font-weight: bold } /* Generic.Prompt */
+.gs { font-weight: bold } /* Generic.Strong */
+.gu { color: #800080; font-weight: bold } /* Generic.Subheading */
+.gt { color: #0040D0 } /* Generic.Traceback */
+.kc { color: #008000; font-weight: bold } /* Keyword.Constant */
+.kd { color: #008000; font-weight: bold } /* Keyword.Declaration */
+.kn { color: #008000; font-weight: bold } /* Keyword.Namespace */
+.kp { color: #008000 } /* Keyword.Pseudo */
+.kr { color: #008000; font-weight: bold } /* Keyword.Reserved */
+.kt { color: #B00040 } /* Keyword.Type */
+.m { color: #666666 } /* Literal.Number */
+.s { color: #BA2121 } /* Literal.String */
+.na { color: #7D9029 } /* Name.Attribute */
+.nb { color: #008000 } /* Name.Builtin */
+.nc { color: #0000FF; font-weight: bold } /* Name.Class */
+.no { color: #880000 } /* Name.Constant */
+.nd { color: #AA22FF } /* Name.Decorator */
+.ni { color: #999999; font-weight: bold } /* Name.Entity */
+.ne { color: #D2413A; font-weight: bold } /* Name.Exception */
+.nf { color: #0000FF } /* Name.Function */
+.nl { color: #A0A000 } /* Name.Label */
+.nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
+.nt { color: #008000; font-weight: bold } /* Name.Tag */
+.nv { color: #19177C } /* Name.Variable */
+.ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
+.w { color: #bbbbbb } /* Text.Whitespace */
+.mf { color: #666666 } /* Literal.Number.Float */
+.mh { color: #666666 } /* Literal.Number.Hex */
+.mi { color: #666666 } /* Literal.Number.Integer */
+.mo { color: #666666 } /* Literal.Number.Oct */
+.sb { color: #BA2121 } /* Literal.String.Backtick */
+.sc { color: #BA2121 } /* Literal.String.Char */
+.sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
+.s2 { color: #BA2121 } /* Literal.String.Double */
+.se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
+.sh { color: #BA2121 } /* Literal.String.Heredoc */
+.si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */
+.sx { color: #008000 } /* Literal.String.Other */
+.sr { color: #BB6688 } /* Literal.String.Regex */
+.s1 { color: #BA2121 } /* Literal.String.Single */
+.ss { color: #19177C } /* Literal.String.Symbol */
+.bp { color: #008000 } /* Name.Builtin.Pseudo */
+.vc { color: #19177C } /* Name.Variable.Class */
+.vg { color: #19177C } /* Name.Variable.Global */
+.vi { color: #19177C } /* Name.Variable.Instance */
+.il { color: #666666 } /* Literal.Number.Integer.Long */
 html{color:#000;font-family:sans-serif}
 div,p{margin:1em 0}
 sub{vertical-align:sub}
@@ -336,68 +397,6 @@ ul.moin-tags li.weight9{font-size:200%}
 .moin-flash-info{background-image:url("../img/smileys/icon-info.png")}
 .moin-flash-warning{background-image:url("../img/smileys/alert.png");background-color:#f1f3dc}
 .moin-flash-error{background-image:url("../img/smileys/icon-error.png");background-color:#f1dadc}
-.highlight .hll{background-color:#ffc}
-.highlight{background:#f8f8f8}
-.highlight .c{color:#408080;font-style:italic}
-.highlight .err{border:1px solid #f00}
-.highlight .k{color:#008000;font-weight:bold}
-.highlight .o{color:#666}
-.highlight .cm{color:#408080;font-style:italic}
-.highlight .cp{color:#bc7a00}
-.highlight .c1{color:#408080;font-style:italic}
-.highlight .cs{color:#408080;font-style:italic}
-.highlight .gd{color:#a00000}
-.highlight .ge{font-style:italic}
-.highlight .gr{color:#f00}
-.highlight .gh{color:#000080;font-weight:bold}
-.highlight .gi{color:#00a000}
-.highlight .go{color:#808080}
-.highlight .gp{color:#000080;font-weight:bold}
-.highlight .gs{font-weight:bold}
-.highlight .gu{color:#800080;font-weight:bold}
-.highlight .gt{color:#0040d0}
-.highlight .kc{color:#008000;font-weight:bold}
-.highlight .kd{color:#008000;font-weight:bold}
-.highlight .kn{color:#008000;font-weight:bold}
-.highlight .kp{color:#008000}
-.highlight .kr{color:#008000;font-weight:bold}
-.highlight .kt{color:#b00040}
-.highlight .m{color:#666}
-.highlight .s{color:#ba2121}
-.highlight .na{color:#7d9029}
-.highlight .nb{color:#008000}
-.highlight .nc{color:#00f;font-weight:bold}
-.highlight .no{color:#800}
-.highlight .nd{color:#a2f}
-.highlight .ni{color:#999;font-weight:bold}
-.highlight .ne{color:#d2413a;font-weight:bold}
-.highlight .nf{color:#00f}
-.highlight .nl{color:#a0a000}
-.highlight .nn{color:#00f;font-weight:bold}
-.highlight .nt{color:#008000;font-weight:bold}
-.highlight .nv{color:#19177c}
-.highlight .ow{color:#a2f;font-weight:bold}
-.highlight .w{color:#bbb}
-.highlight .mf{color:#666}
-.highlight .mh{color:#666}
-.highlight .mi{color:#666}
-.highlight .mo{color:#666}
-.highlight .sb{color:#ba2121}
-.highlight .sc{color:#ba2121}
-.highlight .sd{color:#ba2121;font-style:italic}
-.highlight .s2{color:#ba2121}
-.highlight .se{color:#b62;font-weight:bold}
-.highlight .sh{color:#ba2121}
-.highlight .si{color:#b68;font-weight:bold}
-.highlight .sx{color:#008000}
-.highlight .sr{color:#b68}
-.highlight .s1{color:#ba2121}
-.highlight .ss{color:#19177c}
-.highlight .bp{color:#008000}
-.highlight .vc{color:#19177c}
-.highlight .vg{color:#19177c}
-.highlight .vi{color:#19177c}
-.highlight .il{color:#666}
 @media screenprojection{body{background-color:#f3f7fd}
 #moin-page{margin:0;padding:0;display:table;width:100%;table-layout:fixed}
 #moin-content{background:#fff;overflow:hidden;box-shadow:1px 1px 33px -11px inset;padding:8px 25px;display:table-cell}
