--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -972,6 +972,13 @@ ul.moin-tags li.weight9
 body
     background-color #F3F7FD
 
+#moin-main-wrapper
+    width 76%
+    min-width 700px
+    margin-left auto
+    margin-right auto
+    margin-top 0px
+
 #moin-page
     margin 0
     padding 0
