--- a/MoinMoin/themes/modernized/static/css/stylus/color_palette.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/color_palette.styl
@@ -13,11 +13,11 @@ border_color = #4e7da9
 shadow_color = #9d9d9b
 table_bg_color = #eef1f6
 table_row_color = #d8dfe9
-link_color = #1f9ae0
-hover_color = #708090
-active_color = #9c93ba
-visited_color = #646f7c
-nonexistent_link_color = #5a5a5a
+link_color = #708090
+hover_color = #1f9ae0
+active_color = #51d443
+visited_color = #88c2b5
+nonexistent_link_color = #939393
 nonexistent_hover_color = #1f62ad
 selected_link_color = #F82A2A
 error_color = #ff2727
